busybox/deploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
  creationTimestamp: null
  labels:
    app: busybox-http-app
  name: busybox-http-app
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: busybox-http-app
    deploymentconfig: busybox-http-app
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        app: busybox-http-app
        deploymentconfig: busybox-http-app
    spec:
      containers:
      - image: ''
        imagePullPolicy: IfNotPresent
        name: busybox-http-app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - busybox-http-app
      from:
        kind: ImageStreamTag
        name: busybox-http-app:1.0
        namespace: busybox
    type: ImageChange
