busybox/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    app: busybox-http-app
  name: busybox-http-app
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: busybox-http-app
    deploymentconfig: busybox-http-app
  sessionAffinity: None
  type: ClusterIP
