busybox/route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
  creationTimestamp: null
  labels:
    app: busybox-http-app
  name: busybox-http-app
spec:
  host: busybox-http-app-busybox.192.168.42.203.nip.io
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: busybox-http-app
    weight: 100
  wildcardPolicy: None
